# fdme

./: .env  .gitignore  Dockerfile  README.md  docker-compose-cicd.yml  docker-compose.yml  env_example  fdme  github_actions.yml  manage.py  pyproject.toml  requirements.pip  requirements.txt  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: app.yml  secrets.yml
api/: rotas.py  serializes.py  viewset.py
core/: settings.py  urls.py  wsgi.py
docker-entrypoint-initdb.d/: database.sql  init-user-db.sh
findme/: admin.py  asgi.py  forms.py  models.py  routing.py  urls.py  views.py
findme/application/: get_geolocation.py  register_user.py
findme/domain/: device.py  errors_mixin.py  phone.py  user.py
findme/infra/websocket/: asgi.py  channels_middleware.py  consumers.py  routing.py
findme/migrations/: 0001_initial.py  0002_auto_20170930_1033.py
mysite/: settings.py  wsgi.py
src/core/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
src/findme/application/: register_user.py
src/findme/application/services/: email_service.py  mediator.py
src/findme/application/users_usecase/: __init__.py  dto.py  pre_register_user.py  register_user.py
src/findme/domain/: __init__.py  device.py  phone.py  user.py
src/findme/domain/devices/: device.py  dto.py
src/findme/domain/events/: dto.py
src/findme/domain/phones/: __init__.py  dto.py  phone.py
src/findme/domain/users/: dto.py  user.py
src/findme/domain/validation/: __init__.py  base_validate.py  (+3 more)
src/findme/infra/: websocket_teste.py
src/findme/migrations/: 0001_initial.py  0002_alter_user_active_alter_user_address_alter_user_age_and_more.py
tests/: conftest.py
tests/unit/: test_register_user.py  test_websocket.py
(+15 files in other folders)
